# ratatui-hypertile

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
assets/: demo.tape
examples/: core_only.rs
extras/: Cargo.toml
extras/examples/: basic.rs
extras/src/: lib.rs  registry.rs
extras/src/registry/: typed.rs  types.rs
extras/src/runtime/: animation.rs  builder.rs  constants.rs  crossterm.rs  default_plugin.rs  keymap.rs  mod.rs  palette.rs  render.rs  tab_bar.rs  types.rs  widget.rs  workspace.rs
src/: engine.rs  input.rs  lib.rs  types.rs  widget.rs
src/core/: helpers.rs  mod.rs  serde_impl.rs  types.rs
src/core/state/: focus.rs  mod.rs  movement.rs  mutation.rs  tests.rs
