[package]
name = "ratatui-hypertile-extras"
version = "0.3.0"
edition = "2024"
rust-version = "1.88"
description = "Optional runtime helpers for ratatui-hypertile"
license = "MIT"
repository = "https://github.com/nikolic-milos/ratatui-hypertile"
documentation = "https://docs.rs/ratatui-hypertile-extras"
keywords = ["tiling", "ratatui", "tui", "plugins", "runtime"]
categories = ["command-line-interface"]

[dependencies]
ratatui-hypertile = { version = "0.3.0", path = "..", default-features = false }
ratatui = { version = "0.30", default-features = false }
crossterm = { version = "0.29", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["crossterm"]
crossterm = ["dep:crossterm"]
serde = ["dep:serde", "dep:serde_json", "ratatui-hypertile/serde"]

[[example]]
name = "basic"
required-features = ["crossterm"]
